fixed spacing on page index

--- a/public/css/front-end.css
+++ b/public/css/front-end.css
@@ -692,7 +692,7 @@ pre{
 
 .article-box h3{
     margin-top: 20px;
-    max-height: 100px;
+    height: 140px;
     font-weight: 200;
     margin-bottom: 20px;
 }
